Fixed player mobile alignment

--- a/src/Components/Common/Player/Player.scss
+++ b/src/Components/Common/Player/Player.scss
@@ -11,6 +11,9 @@
   background-position: center;
   overflow: hidden;
   padding: 30px 0 0 0;
+  @media screen and (max-width: 650px) {
+  padding: 16px 0 0 0;
+  }
   .background-blur {
     position: absolute;
     top: 0px;
